<resources>
    <string name="app_name">Крестики нолики</string>
    <string name="image_of_field_for_game">Поле для игры</string>
    <string name="start_game">Начать игру</string>
    <string name="exit_game">Выход из игры</string>
    <string name="nullable_score">Обнулить счет</string>
    <string name="new_game">Новая игра</string>
    <string name="tic_score0">Крестики: 0</string>
    <string name="tac_score0">Нолики: 0</string>
    <string name="cell_of_field">Ячейка поля</string>
    <string name="tic_score">Крестики: </string>
    <string name="tac_score">Нолики: </string>
</resources>